force-app/main/default/objects/LOA_Request__c/LOA_Request__c.object-meta.xml
<CustomObject>
    <label>LOA Request</label>
    <nameField>
        <displayFormat>LOA-{00000}</displayFormat>
        <label>LOA Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOA Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>