force-app/main/default/objects/LOA_Request__c/fields/Oracle_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Id__c</fullName>
    <formula>Contact__r.FinchOracleId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle Id</label>
    <type>Text</type>
</CustomField>