force-app/main/default/objects/LOA_Request__c/fields/Reseller_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Certificate__c</fullName>
    <label>Reseller Certificate #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>